feat(base-expression): native Jakarta EL 6.0 implementation (#39)